--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="fetch1.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
+
     <div class="container">
         <div class="left">
-            <input type="text" placeholder="Search Flag">
+            <input type="text" placeholder="Enter country name (Eg. India)">
             <button>Search</button>
         </div>
         <div class="centre"></div>
