--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="container">
         <div class="left">
-            <input type="text" placeholder="Enter country name (Eg. India)">
+            <input type="text" placeholder="Enter country name (Eg. India)" autofocus>
             <button>Search</button>
         </div>
         <div class="centre"></div>
@@ -35,6 +35,7 @@
                     document.querySelector("img").src = `https://flagcdn.com/160x120/${i}.png`;
 
                     document.querySelector(".centre").innerHTML = `Flag of ${v}`;
+                    document.querySelector("input").value="";
                 }
             }
         })
